--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,11 @@
 version: '3'
 
 services:
-  chatgpt-demo:
-    image: ddiu8081/chatgpt-demo:latest
+  app:
+    build: .
     container_name: chatgpt-demo
-    restart: always
+    image: chatgpt-demo
     ports:
-        - "3000:3000"
-    environment:
-      - OPENAI_API_KEY=YOUR_OPENAI_API_KEY
-      # - HTTPS_PROXY=YOUR_HTTPS_PROXY
-      # - OPENAI_API_BASE_URL=YOUR_OPENAI_API_BASE_URL
-      # - HEAD_SCRIPTS=YOUR_HEAD_SCRIPTS
-      # - PUBLIC_SECRET_KEY=YOUR_SECRET_KEY
-      # - SITE_PASSWORD=YOUR_SITE_PASSWORD
-      # - OPENAI_API_MODEL=YOUR_OPENAI_API_MODEL
-
+      - 3000:3000
+    volumes:
+      - .env:/usr/src/.env
