--- a/package.json
+++ b/package.json
@@ -15,34 +15,54 @@
   },
   "dependencies": {
     "@astrojs/netlify": "2.0.0",
-    "@astrojs/node": "^5.0.4",
-    "@astrojs/solid-js": "^2.0.2",
-    "@astrojs/vercel": "^3.1.3",
-    "@unocss/reset": "^0.50.1",
-    "astro": "^2.0.15",
-    "eslint": "^8.36.0",
+    "@astrojs/node": "^5.1.1",
+    "@astrojs/solid-js": "^2.1.0",
+    "@astrojs/vercel": "^3.2.2",
+    "@mapbox/rehype-prism": "^0.8.0",
+    "@nanostores/solid": "^0.3.2",
+    "@solid-primitives/keyboard": "^1.1.0",
+    "@solid-primitives/scheduled": "^1.3.2",
+    "@solid-primitives/scroll": "^2.0.14",
+    "@unocss/reset": "^0.50.6",
+    "@zag-js/dialog": "^0.2.15",
+    "@zag-js/menu": "^0.5.0",
+    "@zag-js/select": "^0.6.0",
+    "@zag-js/slider": "^0.2.14",
+    "@zag-js/solid": "^0.3.1",
+    "@zag-js/switch": "^0.5.0",
+    "@zag-js/toast": "^0.2.13",
+    "@zag-js/toggle": "^0.2.15",
+    "@zag-js/tooltip": "^0.2.12",
+    "astro": "^2.2.0",
+    "eslint": "^8.37.0",
     "eventsource-parser": "^0.1.0",
-    "highlight.js": "^11.7.0",
+    "idb-keyval": "^6.2.0",
     "js-sha256": "^0.9.0",
-    "katex": "^0.6.0",
-    "markdown-it": "^13.0.1",
-    "markdown-it-highlightjs": "^4.0.1",
-    "markdown-it-katex": "^2.0.3",
+    "katex": "^0.16.4",
+    "nanostores": "^0.7.4",
+    "prism-theme-vars": "^0.2.4",
+    "rehype-katex": "^6.0.2",
+    "rehype-stringify": "^9.0.3",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
     "solid-js": "1.6.12",
+    "solid-transition-group": "^0.2.2",
     "solidjs-use": "^1.2.0",
-    "undici": "^5.20.0"
+    "unified": "^10.1.2"
   },
   "devDependencies": {
+    "@evan-yang/eslint-config": "^1.0.9",
     "@iconify-json/carbon": "^1.1.16",
-    "@types/markdown-it": "^12.2.3",
-    "@typescript-eslint/parser": "^5.54.1",
-    "@unocss/preset-attributify": "^0.50.1",
-    "@unocss/preset-icons": "^0.50.4",
-    "@unocss/preset-typography": "^0.50.3",
+    "@iconify-json/simple-icons": "^1.1.48",
+    "@typescript-eslint/parser": "^5.57.1",
+    "@unocss/preset-attributify": "^0.50.6",
+    "@unocss/preset-icons": "^0.50.6",
+    "@unocss/preset-typography": "^0.50.6",
     "eslint-plugin-astro": "^0.24.0",
     "punycode": "^2.3.0",
-    "unocss": "^0.50.1",
-    "@evan-yang/eslint-config": "^1.0.1",
-    "vite-plugin-pwa": "^0.14.1"
+    "unocss": "^0.50.6",
+    "vite-plugin-pwa": "^0.14.7"
   }
 }
